gcc/testsuite/g++.dg/template/crash46.C
// PR c++/27102

template <class T>
void T::foo() {} // { dg-error "invalid" }

